--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -14,9 +14,16 @@
 </head>
 
     <body>
-    <!-- Remove this line the first time you edit this file -->
-     This is the index page of your Django app!
-    <!--Add a nav bar here -->
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <span class="navbar-brand" href="#">Online Course</span>
+                </div>
+                <div class="nav navbar-nav navbar-right">
+                    <a class="btn btn-link">About us</a>
+                </div>
+            </div>
+        </nav>
 
     <!--Add a dealer table here -->
 
