enabled routing and view of about page

--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -20,7 +20,7 @@
                     <span class="navbar-brand" href="#">Online Course</span>
                 </div>
                 <div class="nav navbar-nav navbar-right">
-                    <a class="btn btn-link">About us</a>
+                    <a class="btn btn-link" href="{% url 'djangoapp:about' %}">About us</a>
                 </div>
             </div>
         </nav>
