stylized about us template

--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -1,9 +1,29 @@
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    </head>
     <body>
-        <h1>
-            Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
-        </h1>
-        
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Online Course</a>
+                </div>
+                <div class="nav navbar-nav navbar-right">
+                    <a class="btn btn-link">About us</a>
+                </div>
+            </div>
+        </nav>
+        <div class="container">
+            <h1>
+                About us
+            </h1>
+            <p>
+                Welcome to Best Cars dealership, home to the best cars in North America.
+            </p>
+            <p>
+                We sell domestic and imported cars at reasonable prices.
+            </p>
+        </div>
     </body>
 </html>
