--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
     <body>
-    <!--Add a registration form here -->
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Online Course</a>
+                    <a class="btn btn-link" href="{% url 'djangoapp:about' %}">About us</a>
+                    <a class="btn btn-link" href="{% url 'djangoapp:contact' %}">Contact us</a>
+                </div>
+            </div>
+        </nav>
+        <form action="{% url 'djangoapp:register' %}" method="post">
+            <div class="container">
+              <h1>Sign Up</h1>
+              <hr>
+              <label for="username"><b>User Name</b></label>
+              <input type="text" placeholder="Enter User Name: " name="username" required>
+              <label for="firstname"><b>First Name</b></label>
+              <input type="text" placeholder="Enter First Name: " name="firstname" required>
+              <label for="lastname"><b>Last Name</b></label>
+              <input type="text" placeholder="Enter Last Name: " name="lastname" required>
+              <label for="psw"><b>Password</b></label>
+              <input type="password" placeholder="Enter Password: " name="psw" required>
+              <div>
+                  {% csrf_token %}
+                  <button class="button" type="submit">Sign Up</button>
+              </div>
+            </div>
+          </form>
     </body>
 </html>
