--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -11,8 +11,39 @@
 
 </head>
     <body>
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <span class="navbar-brand" href="{% url 'djangoapp:index' %}">Online Course</span>
+                        <a class="btn btn-link" href="{% url 'djangoapp:about' %}">About us</a>
+                        <a class="btn btn-link" href="{% url 'djangoapp:contact' %}">Contact us</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                    <li>
+                        <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                        <a class="btn btn-link" href="{% url 'djangoapp:dealer_details' dealer_id %}">Go Back</a>
+                        <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li>
+                        <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                            {% csrf_token %}
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Username" name="username" >
+                                <input type="password" class="form-control" placeholder="Password" name="psw" >
+                                <button class="btn btn-primary" type="submit">Login</button>
+                                <a class="btn btn-link" href="{% url 'djangoapp:register' %}">Sign Up</a>
+                            </div>
+                        </form>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
     <!--Add review form here -->
         <div class="container">
+            <h4>Submit a review:</h4>
             <form action="{% url 'djangoapp:add_review' dealer_id%}" method="post">
                 <div class="form-group">
                     <label for="review">Write your review here:</label>
@@ -27,14 +58,14 @@
                     <select name="car" id="car" class="form-select" required>
                         {% for car in cars %}
                             <option selected value={{car.id}}>
-                                {{car.name}} - {{car.make.name}} - {{ car.year|date:"Y" }}
+                                {{car.car_make.name}} - {{car.name}} - {{ car.year|date:"Y" }}
                             </option>
                         {% endfor %}
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="purchasedate">Enter your purchase date:</label>
-                    <input class="form-control" type="text" name="purchasedate" id="purchasedate">
+                    <input class="form-control" type="date" name="purchasedate" id="purchasedate">
                 </div>
             </form>
         </div>
