added submit button

--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -67,6 +67,7 @@
                     <label for="purchasedate">Enter your purchase date:</label>
                     <input class="form-control" type="date" name="purchasedate" id="purchasedate">
                 </div>
+                <button type="submit" class="btn btn-primary">Submit review</button>
             </form>
         </div>
     </body>
