--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="form-group">
                     <label for="purchasedate">Enter your purchase date:</label>
-                    <input class="form-control" type="date" name="purchasedate" id="purchasedate">
+                    <input class="form-control" type="date" name="purchasedate" id="purchasedate" value="2000-01-01">
                 </div>
                 {% csrf_token %}
                 <button type="submit" class="btn btn-primary">Submit review</button>
